<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <LinearLayout
        android:id="@+id/NavBar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/purple_500"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:paddingVertical="10dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgInfinite"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/ic_infinity"
            android:contentDescription="@string/image_of_infinite_icon" />

        <ImageView
            android:id="@+id/imgSmile"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/image_of_smile_icon"
            android:src="@drawable/ic_smile" />

        <ImageView
            android:id="@+id/imgSun"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/image_of_sun_icon"
            android:src="@drawable/ic_sun" />

    </LinearLayout>

    <TextView
        android:id="@+id/txtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/how_are_you"
        app:layout_constraintTop_toBottomOf="@+id/NavBar"
        android:gravity="center"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:layout_marginTop="25dp"/>

    <TextView
        android:id="@+id/txtPhase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginHorizontal="20dp"
        android:text="@string/how_are_you"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@+id/txtName"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/purple_500"
        android:layout_marginVertical="40dp"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintTop_toBottomOf="@+id/txtPhase" />

    <Button
        android:id="@+id/btnNewPhrase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_phrase"
        android:textSize="20sp"
        android:layout_marginBottom="30dp"
        android:textColor="@color/white"
        android:background="@drawable/ripple_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>